Добавлено подтверждение удаления.

--- a/src/assets/sass/mixins.sass
+++ b/src/assets/sass/mixins.sass
@@ -11,7 +11,10 @@
 	@if $delay > 0
 		transition-delay: $delay
 
-
+=textoverflow
+	overflow: hidden
+	white-space: nowrap
+	text-overflow: ellipsis
 
 /*! Bulma v0.6.1 | MIT License | github.com/jgthms/bulma */
 
