--- a/src/assets/sass/root/event-tooltip.sass
+++ b/src/assets/sass/root/event-tooltip.sass
@@ -22,9 +22,7 @@
 		box-shadow: 0 1px 16px 0 rgba(0, 44, 92, .28)
 		h4,
 		p
-			overflow: hidden
-			white-space: nowrap
-			text-overflow: ellipsis
+			+textoverflow
 		h4
 			margin-bottom: 8px
 			padding-right: 30px
