--- a/src/assets/sass/root/recommendation-select.sass
+++ b/src/assets/sass/root/recommendation-select.sass
@@ -20,14 +20,12 @@
 			color: #fff
 			fill: #fff
 	&-title
+		+textoverflow
 		flex-basis: 0
 		flex-grow: 1
 		flex-shrink: 1
 		padding: 10px
-		overflow: hidden
 		line-height: 17px
-		white-space: nowrap
-		text-overflow: ellipsis
 		span
 			display: inline-block
 			margin-right: 12px
